--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node": "14.x"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^4.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
